[project]
name = "ComfyUI-WBLESS"
description = "Nodes: RunningHUB API, API Core-RustFS, API Core, Image Mask Blend, Jimeng Image 4.0, Set Global Variable, Get Global Variable, Inversed Switch, Switch, Dominant Axis Scale, Area Based Scale, Area Based Scale (Pixel), Get Image Size, Get Mask Size, Overlay Text, Text Block, Gradient, ApplyMaskToAlpha, ImageHasAlpha, Baseline Alignment (X), Baseline Alignment (Y)."
version = "2.9.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/LaoMaoBoss/ComfyUI-WBLESS"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "laomaoboss"
DisplayName = "ComfyUI-WBLESS"
Icon = ""
includes = []














